--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -9,6 +9,7 @@ dependencies:
   - boto3=1.17.109
   - pip:
       - jupyter==1.0.0
+      - tensorboard==2.5.0
       - musdb==0.4.0
       - pyyaml==5.4.1
       - torch==1.9.0
