--- a/environment-train.yml
+++ b/environment-train.yml
@@ -5,8 +5,8 @@ dependencies:
   - pip=21.1.3
   - python=3.9.5
   - pip:
-      - jupyter==1.0.0
       - musdb==0.4.0
       - pyyaml==5.4.1
       - torch==1.9.0
       - torchaudio==0.9.0
+      - tensorboard==2.5.0
