--- a/config_example.yml
+++ b/config_example.yml
@@ -8,7 +8,8 @@ dataset:
     chunk_duration: 300
 optimizer:
   lr: 0.0003
-
+quantizer:
+  penalty: 0.0003
 criterion:
   method: "L1LossWithTrimming"
   kwargs:
