--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -9,10 +9,11 @@ dependencies:
   - boto3=1.17.109
   - pip:
       - jupyter==1.0.0
-      - tensorboard==2.5.0
+      - tensorboard
       - musdb==0.4.0
       - pyyaml==5.4.1
       - torch==1.9.0
       - torchaudio==0.9.0
       - museval==0.4.0
       - diffq==0.1.1
+      - torch_tb_profiler
