--- a/environment-train.yml
+++ b/environment-train.yml
@@ -9,6 +9,7 @@ dependencies:
       - pyyaml==5.4.1
       - torch==1.9.0
       - torchaudio==0.9.0
-      - tensorboard==2.5.0
+      - tensorboard
       - museval==0.4.0
       - diffq==0.1.1
+      - torch_tb_profiler
