--- a/tests/config_test.yml
+++ b/tests/config_test.yml
@@ -1,6 +1,9 @@
 sample_rate: 44100
 sources: ["drums", "bass", "vocals", "other"]
 
+model:
+  num_layers: 6
+  initial_channel: 4
 dataset:
   train:
     chunk_duration: 1
