--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demucs-clone",
+  "name": "demucs-demo",
   "version": "0.1.0",
   "homepage": "https://helloybz.github.io/demucs-clone",
   "private": true,
